--- a/static/style.css
+++ b/static/style.css
@@ -1,26 +1,21 @@
-* {
-  margin: 0;
-  padding: 0;
-}
-
 html {
-  height: 100%;
+  height: 100vh;
   overflow: hidden scroll;
+  font-size: 16px;
 }
 
 body {
-  min-height: 100%;
-  font-family: Georgia;
+  margin: 0;
   background-color: #eee;
+  color: #333;
+  font-family: Courier;
 }
 
 header {
-
+  display: flex;
+  justify-content: center;
 }
 
 header h1 {
-  width: 40%;
-  margin: 10px auto;
-  text-align: center;
-  letter-spacing: 8px;
+  letter-spacing: 20px;
 }
