--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,7 +8,9 @@
 </head>
 <body>
   <header>
-    <h1>- QUANTISED -</h1>
+    <h1>-QUANTISED-</h1>
   </header>
+  {% block content %}
+  {% endblock content %}
 </body>
 </html>
