--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,11 +4,12 @@
   <meta charset='utf-8'>
   <meta name='viewport' content='width=device-width, initial scale=1, shrink-to-fit=no'>
   <title>Quantised</title>
+  <link rel='stylesheet' type='text/css' href='/static/reset.css'>
   <link rel='stylesheet' type='text/css' href='/static/style.css'>
 </head>
 <body>
   <header>
-    <h1>-QUANTISED-</h1>
+    <h1><a href="{{ url_for('home') }}">-QUANTISED-</a></h1>
   </header>
   {% block content %}
   {% endblock content %}
