--- a/static/reset.css
+++ b/static/reset.css
@@ -1,6 +1,7 @@
 html {
   height: 100vh;
   overflow: hidden scroll;
+  font-size: 16px;
 }
 
 body {
@@ -10,7 +11,7 @@ body {
   background-color: #fff;
 }
 
-a:link, a:visited {
+a {
   text-decoration: none;
   color: inherit;
 }
