--- a/templates/home.html
+++ b/templates/home.html
@@ -4,11 +4,11 @@
   The foundation of modern physics is quantum mechanics, a theory that illuminates the behaviour of the microscopic world. Unfortunately, its success arises at the cost of human intuition. In the following series of articles, I have attempted to illustrate the principles of quantum theory, in a concise and non-mathematical form.
 </article>
 <section class='grid'>
-  <h3>|1> An Introduction</h3>
-  <h3>The History <2|</h3>
-  <h3>|3> Classical Correlations</h3>
-  <h3>The Mathematical Formalism <4|</h3>
-  <h3>|5> The Atom</h3>
-  <h3>Symmetries <6|</h3>
+  <span>|1> An Introduction</span>
+  <span>The History <2|</span>
+  <span>|3> Classical Correlations</span>
+  <span>The Mathematical Formalism <4|</span>
+  <span>|5> The Atom</span>
+  <span>Symmetries <6|</span>
 </section>
 {% endblock content %}
