--- a/static/reset.css
+++ b/static/reset.css
@@ -1,5 +1,7 @@
 html {
   height: 100vh;
+  margin: 0;
+  padding: 0;
   overflow: hidden scroll;
   font-size: 16px;
 }
@@ -9,6 +11,10 @@ body {
   padding: 0;
   color: #000;
   background-color: #fff;
+}
+
+nav ul {
+  list-style-type: none;
 }
 
 a {
