linked fonts and js

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,6 +6,9 @@
   <title>Quantised</title>
   <link rel='stylesheet' type='text/css' href='/static/reset.css'>
   <link rel='stylesheet' type='text/css' href='/static/style.css'>
+  <link href='https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap' rel='stylesheet'>
+  <link href='https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap' rel='stylesheet'>
+  <script async src='/static/main.js'></script>
 </head>
 <body>
   <header>
