--- a/static/style.css
+++ b/static/style.css
@@ -1,56 +1,68 @@
 body {
   background-color: #ddd;
-  font-family: Courier;
+  font-family: Montserrat, Courier;
   line-height: 2rem;
 }
 
 header {
   display: flex;
   justify-content: center;
-  background-color: teal;
+  position: fixed;
+  height: 12vh;
+  width: 100%;
+  background-color: #008080;
+  z-index: 10;
 }
 
 header h1 {
-  margin-right: -0.5rem;
   color: #444;
+  font-family: 'Playfair Display', Courier;
   font-size: 2rem;
-  letter-spacing: 0.5rem;
+  letter-spacing: 1rem;
+  margin-right: -1rem;
+}
+
+h1 a {
+  padding: 1rem;
 }
 
 h1 a:hover, h1 a:active {
-  color: #222;
-  transition: 0.5s;
+  color: #000;
+  transition: 400ms;
+}
+
+section {
+  display: grid;
+  grid-template-columns: 2.5fr 7.5fr;
+  position: relative;
+  top: 12vh;
+  min-height: 88vh;
+  width: 100%;
+}
+
+nav {
+  color: #ddd;
+  background-color: #222;
+}
+
+nav ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+nav ul li {
+  padding: 0.5rem 1rem;
+  border-bottom: #000 solid 1px;
+}
+
+nav ul li:hover {
+  color: #87ceeb;
+  background-color: #000;
+  cursor: pointer;
+  transition: 400ms;
 }
 
 article {
-  width: 90vw;
-  margin: 1rem auto;
-  text-align: justify;
-}
-
-.grid {
-  width: 90vw;
-  margin: 1rem auto;
-  display: grid;
-  grid-gap: 0.5rem;
-}
-
-.grid span {
-  border: black solid 1px;
-}
-
-@media screen and (min-width: 800px) {
-  body {
-    font-size: 18px;
-  }
-
-  header h1 {
-    letter-spacing: 1rem;
-    margin-right: -1rem;
-  }
-
-  article {
-    width: 800px;
-    padding: 0;
-  }
+  padding: 0.5rem 1rem;
 }
