--- a/reset.css
+++ b/reset.css
@@ -1,14 +1,16 @@
-html {
-  height: 100vh;
+* {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+}
+
+html {
+  height: 100vh;
   overflow: hidden scroll;
   font-size: 16px;
 }
 
 body {
-  margin: 0;
-  padding: 0;
   color: #000;
   background-color: #fff;
 }
