--- a/style.css
+++ b/style.css
@@ -1,20 +1,22 @@
 body {
-  background-color: #ddd;
   font-family: Montserrat, Courier;
   line-height: 2rem;
+  background-color: #ddd;
 }
 
 header {
   display: flex;
   justify-content: center;
+  align-items: center;
   position: fixed;
+  z-index: 10;
   height: 12vh;
   width: 100%;
   background-color: #008080;
-  z-index: 10;
 }
 
 header h1 {
+  height: 6vh;
   color: #444;
   font-family: 'Playfair Display', Courier;
   font-size: 2rem;
@@ -46,8 +48,6 @@ nav {
 }
 
 nav ul {
-  margin: 0;
-  padding: 0;
   list-style-type: none;
 }
 
@@ -57,9 +57,9 @@ nav ul li {
 }
 
 nav ul li:hover {
+  cursor: pointer;
   color: #87ceeb;
   background-color: #000;
-  cursor: pointer;
   transition: 400ms;
 }
 
