--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ h1 a:hover, h1 a:active {
   transition: 400ms;
 }
 
-section {
+main {
   display: grid;
   grid-template-columns: 2.5fr 7.5fr;
   position: relative;
