--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body {
+  color: #222;
   background-color: #ddd;
   font-family: Montserrat, Courier;
   line-height: 2rem;
@@ -10,33 +11,35 @@ header {
   align-items: center;
   position: fixed;
   z-index: 10;
-  height: 12vh;
+  height: 16vh;
   width: 100%;
   background-color: #008080;
 }
 
 h1 {
-  margin-right: -1rem;
-  padding: 1rem;
-  color: #444;
+  margin-right: -0.5rem;
+  padding: 0.5rem;
   font-family: 'Playfair Display', Courier;
   font-size: 2rem;
-  letter-spacing: 1rem;
+  letter-spacing: 0.5rem;
 }
 
-h1:hover, h1:active {
+h1:active {
   color: #000;
-  cursor: pointer;
-  transition: 400ms;
 }
 
 main {
-  display: grid;
-  grid-template-columns: 2.5fr 7.5fr;
   position: relative;
-  top: 12vh;
-  min-height: 88vh;
-  width: 100%;
+  top: 16vh;
+  min-height: 84vh;
+}
+
+article {
+  padding: 0.5rem 1rem;
+}
+
+h3 {
+  margin: 0.5rem 0;
 }
 
 nav {
@@ -50,14 +53,12 @@ nav ul {
 
 nav ul li {
   padding: 0.5rem 1rem;
-  border-bottom: #000 solid 1px;
+  border-bottom: black solid 1px;
 }
 
-nav ul li:hover {
+nav ul li:active {
   color: #87ceeb;
   background-color: #000;
-  cursor: pointer;
-  transition: 400ms;
 }
 
 .active {
@@ -65,11 +66,44 @@ nav ul li:hover {
   background-color: #000;
 }
 
-.active:hover {
-  color: #fa8072;
-  cursor: default;
-}
+@media (min-width: 480px) {
+  h1 {
+    margin-right: -1rem;
+    padding: 1rem;
+    letter-spacing: 1rem;
+  }
 
-article {
-  padding: 0.5rem 1rem;
+  main {
+    display: grid;
+    grid-template-columns: 2.5fr 7.5fr;
+  }
+
+  @media (min-height: 640px) {
+    header {
+      height: 12vh;
+    }
+
+    h1:hover {
+      color: #000;
+      cursor: pointer;
+      transition: 400ms;
+    }
+
+    main {
+      top: 12vh;
+      min-height: 88vh;
+    }
+
+    nav ul li:hover {
+      color: #87ceeb;
+      background-color: #000;
+      cursor: pointer;
+      transition: 400ms;
+    }
+
+    .active:hover {
+      color: #fa8072;
+      cursor: default;
+    }
+  }
 }
