--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ header {
 
 h1 {
   margin-right: -0.5rem;
-  padding: 0.5rem;
+  padding: 1rem 0.5rem;
   font-family: 'Playfair Display', Courier;
   font-size: 2rem;
   letter-spacing: 0.5rem;
@@ -56,11 +56,6 @@ nav ul li {
   border-bottom: black solid 1px;
 }
 
-nav ul li:active {
-  color: #87ceeb;
-  background-color: #000;
-}
-
 .active {
   color: #fa8072;
   background-color: #000;
@@ -94,7 +89,7 @@ nav ul li:active {
       min-height: 88vh;
     }
 
-    nav ul li:hover {
+    nav ul li:hover, nav ul li:active {
       color: #87ceeb;
       background-color: #000;
       cursor: pointer;
