--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   color: #222;
   background-color: #ddd;
-  font-family: Ubuntu, Courier;
+  font-family: Ubuntu, Georgia, Courier;
   font-size: 18px;
   line-height: 2rem;
 }
@@ -11,22 +11,27 @@ header {
   justify-content: center;
   align-items: center;
   position: fixed;
-  z-index: 10;
   height: 16vh;
   width: 100%;
+  z-index: 10;
   background-color: #008080;
 }
 
 h1 {
-  margin-right: -0.5rem;
-  padding: 1rem 0.5rem;
-  font-family: 'Playfair Display', Courier;
+  font-family: 'Playfair Display', Georgia, Courier;
   font-size: 2rem;
   letter-spacing: 0.5rem;
 }
 
 h1:active {
   color: #000;
+}
+
+h1 a {
+  display: block;
+  padding: 1rem 0 1rem 0.5rem;
+  width: 100%;
+  height: 100%;
 }
 
 main {
@@ -49,19 +54,33 @@ nav {
 }
 
 nav ul li {
-  padding: 0.5rem 1rem;
+  width: 100%;
   border-bottom: black solid 1px;
 }
 
-.active {
+nav ul #active {
   color: #fa8072;
   background-color: #000;
 }
 
-@media (min-width: 480px) {
+nav ul li a {
+  display: block;
+  padding: 0.5rem 1rem;
+  width: 100%;
+  height: 100%;
+}
+
+.eq {
+  display: flex;
+  justify-content: space-between;
+}
+
+.eq i {
+  margin: 0.5rem auto;
+}
+
+@media only screen and (min-width: 480px) {
   h1 {
-    margin-right: -1rem;
-    padding: 1rem;
     letter-spacing: 1rem;
   }
 
@@ -70,14 +89,14 @@ nav ul li {
     grid-template-columns: 2.5fr 7.5fr;
   }
 
-  @media (min-height: 640px) {
+  @media only screen and (min-height: 640px) {
     header {
       height: 12vh;
     }
 
-    h1:hover {
+    h1 a:hover,
+    h1 a:focus {
       color: #000;
-      cursor: pointer;
       transition: 400ms;
     }
 
@@ -86,14 +105,15 @@ nav ul li {
       min-height: 88vh;
     }
 
-    nav ul li:hover, nav ul li:active {
+    nav ul li:hover,
+    nav ul li:active {
       color: #87ceeb;
       background-color: #000;
       cursor: pointer;
       transition: 400ms;
     }
 
-    .active:hover {
+    nav ul #active:hover {
       color: #fa8072;
       cursor: default;
     }
