--- a/style.css
+++ b/style.css
@@ -23,15 +23,15 @@ h1 {
   letter-spacing: 0.5rem;
 }
 
-h1:active {
-  color: #000;
-}
-
 h1 a {
   display: block;
+  width: inherit;
+  height: inherit;
   padding: 1rem 0 1rem 0.5rem;
-  width: 100%;
-  height: 100%;
+}
+
+h1 a:active {
+  color: #000;
 }
 
 main {
@@ -54,20 +54,21 @@ nav {
 }
 
 nav ul li {
-  width: 100%;
+  width: inherit;
   border-bottom: black solid 1px;
-}
-
-nav ul #active {
-  color: #fa8072;
-  background-color: #000;
 }
 
 nav ul li a {
   display: block;
+  width: inherit;
+  height: inherit;
   padding: 0.5rem 1rem;
-  width: 100%;
-  height: 100%;
+}
+
+nav ul li #active,
+nav ul li a:active {
+  color: #fa8072;
+  background-color: #000;
 }
 
 .eq {
@@ -105,15 +106,16 @@ nav ul li a {
       min-height: 88vh;
     }
 
-    nav ul li:hover,
-    nav ul li:active {
+    nav ul li a:hover,
+    nav ul li a:focus {
       color: #87ceeb;
       background-color: #000;
       cursor: pointer;
       transition: 400ms;
     }
 
-    nav ul #active:hover {
+    nav ul li #active:hover,
+    nav ul li #active:focus {
       color: #fa8072;
       cursor: default;
     }
