--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   color: #222;
   background-color: #ddd;
-  font-family: Ubuntu, Georgia, Courier;
+  font-family: Georgia, Courier;
   font-size: 18px;
   line-height: 2rem;
 }
@@ -42,6 +42,7 @@ main {
 
 article {
   padding: 0.5rem 1rem;
+  margin-bottom: 2rem;
 }
 
 h3 {
