--- a/style.css
+++ b/style.css
@@ -1,124 +1,173 @@
 body {
-  color: #222;
-  background-color: #ddd;
-  font-family: Georgia, Courier;
+  font-family: Quicksand, Verdana;
   font-size: 18px;
-  line-height: 2rem;
 }
 
 header {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-end;
   position: fixed;
-  height: 16vh;
   width: 100%;
-  z-index: 10;
-  background-color: #008080;
+  height: 20vh;
+  z-index: 0;
+  background: linear-gradient(#fff, #008080);
 }
 
 h1 {
-  font-family: 'Playfair Display', Georgia, Courier;
-  font-size: 2rem;
-  letter-spacing: 0.5rem;
+  font-family: "Playfair Display", "Times New Roman";
+  font-size: 2.5rem;
 }
 
 h1 a {
   display: block;
   width: inherit;
   height: inherit;
-  padding: 1rem 0 1rem 0.5rem;
-}
-
-h1 a:active {
-  color: #000;
+  padding: 20px;
 }
 
 main {
   position: relative;
-  top: 16vh;
-  min-height: 84vh;
+  top: 22vh;
+  z-index: 1;
+  line-height: 2.5rem;
+  background-color: inherit;
 }
 
+section,
 article {
-  padding: 0.5rem 1rem;
-  margin-bottom: 2rem;
-}
-
-h3 {
-  margin: 0.5rem 0;
+  width: 80%;
+  margin: 0 auto;
+  padding: 10px 0;
 }
 
 nav {
-  color: #ddd;
+  display: grid;
+  grid-gap: 40px;
+  margin: 2rem 0;
+}
+
+.nav-item {
+  width: 100%;
+  margin: 0 auto;
+}
+
+.nav-tile {
+  width: 20px;
+  height: 100%;
+}
+
+.nav-item:nth-child(odd) .nav-tile {
+  float: left;
+  margin-right: 10px;
+}
+
+.nav-item:nth-child(even) .nav-tile {
+  float: right;
+  margin-left: 10px;
+}
+
+.nav-item:nth-child(3n-2) .nav-tile {
+  background-color: #800080;
+}
+
+.nav-item:nth-child(3n-1) .nav-tile {
   background-color: #222;
 }
 
-nav ul li {
-  width: inherit;
-  border-bottom: black solid 1px;
+.nav-item:nth-child(3n) .nav-tile {
+  background-color: #008080;
 }
 
-nav ul li a {
-  display: block;
-  width: inherit;
-  height: inherit;
-  padding: 0.5rem 1rem;
+.nav-item:nth-child(even) {
+  text-align: right;
 }
 
-nav ul li #active,
-nav ul li a:active {
-  color: #fa8072;
-  background-color: #000;
+h2 {
+  margin-bottom: 20px;
 }
 
-.eq {
+h2 a {
+  padding: 10px 0;
+}
+
+nav p {
+  display: none;
+}
+
+i {
+  font-family: Georgia;
+}
+
+.equation {
   display: flex;
+  justify-content: space-between;
+  margin: 10px 0;
+}
+
+.equation i {
+  margin: 0 auto;
+}
+
+.bottom-nav {
+  list-style-type: none;
+  display: flex;
+  flex-direction: column;
   justify-content: space-between;
 }
 
-.eq i {
-  margin: 0.5rem auto;
-}
+@media screen and (min-width: 1000px) {
+  body {
+    font-size: 20px;
+  }
 
-@media only screen and (min-width: 480px) {
+  header {
+    height: 40vh;
+  }
+
   h1 {
-    letter-spacing: 1rem;
+    font-size: 4.5rem;
   }
 
   main {
-    display: grid;
-    grid-template-columns: 2.5fr 7.5fr;
+    top: 40vh;
+    line-height: 3rem;
   }
 
-  @media only screen and (min-height: 640px) {
-    header {
-      height: 12vh;
-    }
+  section,
+  article {
+    width: 1000px;
+    padding: 40px 0;
+  }
 
-    h1 a:hover,
-    h1 a:focus {
-      color: #000;
-      transition: 400ms;
-    }
+  .nav-item {
+    width: 1120px;
+  }
 
-    main {
-      top: 12vh;
-      min-height: 88vh;
-    }
+  .nav-tile {
+    width: 40px;
+    height: 100%;
+  }
 
-    nav ul li a:hover,
-    nav ul li a:focus {
-      color: #87ceeb;
-      background-color: #000;
-      cursor: pointer;
-      transition: 400ms;
-    }
+  .nav-item:nth-child(odd) .nav-tile {
+    float: left;
+    margin-right: 20px;
+  }
 
-    nav ul li #active:hover,
-    nav ul li #active:focus {
-      color: #fa8072;
-      cursor: default;
-    }
+  .nav-item:nth-child(even) .nav-tile {
+    float: right;
+    margin-left: 20px;
+  }
+
+  nav p {
+    display: block;
+  }
+
+  nav ul {
+    display: none;
+  }
+
+  .bottom-nav {
+    flex-direction: row;
   }
 }
