--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
 }
 
 header {
+  box-sizing: border-box;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -38,7 +39,7 @@ section,
 article {
   width: 80%;
   margin: 0 auto;
-  padding: 10px 0;
+  padding: 20px 0;
 }
 
 nav {
@@ -90,11 +91,6 @@ i {
   h1 {
     font-size: 3.5rem;
   }
-
-  section,
-  article {
-    padding: 20px 0;
-  }
 }
 
 @media screen and (min-width: 1120px) {
@@ -119,7 +115,7 @@ i {
   section,
   article {
     width: 1000px;
-    padding: 40px 0;
+    padding: 30px 0;
   }
 
   nav {
