--- a/style.css
+++ b/style.css
@@ -81,6 +81,7 @@ i {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  margin-top: 40px;
 }
 
 @media screen and (min-width: 768px) and (min-height: 1024px) {
