--- a/style.css
+++ b/style.css
@@ -14,13 +14,13 @@ header {
   align-items: center;
   width: 100%;
   height: 20vh;
-  background-color: #fff;
   border-bottom: #007070 solid 4vh;
 }
 
 h1 {
   font-family: "Playfair Display", "Times New Roman";
   font-size: 2.5rem;
+  z-index: 1;
 }
 
 h1 a {
@@ -79,6 +79,14 @@ i {
 iframe {
   width: 100%;
   border: 1px solid #ccc;
+  margin-top: 20px;
+}
+
+.caption {
+  width: 100%;
+  display: inline-block;
+  text-align: center;
+  margin-bottom: 20px;
 }
 
 .bottom-nav {
