--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ header {
   align-items: center;
   width: 100%;
   height: 20vh;
+  background-color: #fff;
   border-bottom: #007070 solid 4vh;
 }
 
