--- a/style.css
+++ b/style.css
@@ -111,6 +111,12 @@ iframe {
     line-height: 3rem;
   }
 
+  nav {
+    grid-template-columns: 4% 80% 4%;
+    column-gap: 3%;
+    justify-content: center;
+  }
+
   nav p {
     display: block;
   }
@@ -123,7 +129,7 @@ iframe {
     flex-direction: row;
   }
 
-  @media screen and (min-width: 1120px) and (max-height: 1080px) {
+  @media screen and (min-width: 1120px) {
     section,
     article {
       width: 1000px;
@@ -132,9 +138,7 @@ iframe {
 
     nav {
       grid-template-columns: 40px 1000px 40px;
-      row-gap: 40px;
       column-gap: 20px;
-      justify-content: center;
     }
   }
 }
