--- a/style.css
+++ b/style.css
@@ -71,18 +71,21 @@ nav p {
 }
 
 #menu {
-  list-style-type: none;
+  list-style-type: square;
   position: absolute;
   top: 80px;
-  width: 100%;
+  left: 20%;
+  width: 80%;
+  margin-top: -5px;
   background-color: #fff;
-  z-index: 0;
+}
+
+#menu li {
+  margin-bottom: 10px;
 }
 
 #menu a {
-  display: block;
-  padding: 10px 20px;
-  border: #ccc solid 1px;
+  padding: 10px 10px;
 }
 
 i {
@@ -140,11 +143,23 @@ i {
   }
 
   #menu {
+    list-style-type: none;
+    left: auto;
     right: 0;
+    margin-top: 0;
     margin-right: 70px;
     width: 40%;
     text-align: right;
-    border: #888 solid 2px;
+    border: #aaa solid 2px;
+  }
+
+  #menu li {
+    margin: 0;
+  }
+
+  #menu a {
+    display: block;
+    padding: 10px 20px;
   }
 
   .bottom-nav {
